# soundgo

./: README.md
.github/old/: ci.yml
.github/workflows/: cd-gpt.yml  cd.yml  ci-gpt.yml  format.yaml
aws/: task-definition.json
backend/: .flake8  .gitignore  Dockerfile  app.py  docker-compose.yaml  makefile  openapi.yml  pyproject.toml
backend/controllers/: recordings.py  user.py
backend/controllers/utils/: auth.py  password.py
backend/migrations/: env.py
backend/migrations/versions/: c3f381b37d60_.py
backend/models/: __init__.py  database.py  recoding.py  s3.py  sessions.py  user.py
backend/test_utils/: create_s3.sh
backend/tests/aws/: test_s3.py
frontend/: App.js  app.json  package-lock.json  package.json
frontend/src/api/: api.js  fetchWiki.js  fetchYahoo.js
frontend/src/api/recordings/: create.js  delete.js  get.js  update.js
frontend/src/api/user/: login.js  logout.js  signup.js
frontend/src/components/: Activity.jsx  AudioRecorder.jsx  CurrentLocation.jsx  Game.jsx  LevelBar.jsx  Profile.jsx  RegistrationForm.jsx
frontend/src/context/: AudioContext.jsx
frontend/src/screens/: CautionScreen.jsx  ExplanationScreen.jsx  HomeScreen.jsx  LoginOrRegisterScreen.jsx  LoginScreen.jsx  MapScreen.jsx  ProfileScreen.jsx  RecordScreen.jsx  RegistrationScreen.jsx
frontend/src/store/: index.js  pointSlice.js
