[tool.poetry]
name = "soundgo"
version = "0.1.0"
description = "hello world project"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
sqlalchemy = "^2.0.36"
mysqlclient = "^2.2.5"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
